# red-team

./: .gitignore  README.md
fyi/: Untitled Diagram.drawio
fyi/xdp-log/: Cargo.toml
fyi/xdp-log-common/: Cargo.toml
fyi/xdp-log-common/src/: lib.rs
fyi/xdp-log-ebpf/src/: main.rs
fyi/xdp-log/src/: main.rs
linpersist/: Cargo.toml
linpersist/src/: main.rs
notes/: README.md
scripts/: enumdomusers.py  namez.py
sms_spoofer/: Cargo.toml
sms_spoofer/src/: main.rs
sms_spoofer/src/util/: cli.rs  client.rs  db.rs  mod.rs
spoofy/: Cargo.toml  README.md
spoofy/src/util/: api.rs  cli.rs  db.rs
