[package]
name = "linpersist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ssh-key = { version = "0.6.2", features = ["ed25519", "alloc", "rsa", "getrandom"] }
users = "0.11.0"
zeroize = "1.6.0"
