[package]
name = "pewpew"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features=["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
xdp-log-common = { path = "../xdp-log-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.3"
network-types = "0.0.4"
hex = "0.4.3"

[[bin]]
name = "xdp-log"
path = "src/main.rs"
